# Pictaflux

./: .gitignore  BUG-REPORT-THUMBNAILS-FIX.md  BUG-REPORT-THUMBNAILS.md  index.html  package-lock.json  package.json  vite.config.ts
sidecar/: diffusion_server.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tablet.rs
src/lib/: abr-parser.ts  brush-engine.ts  descriptor-parser.ts  diffusion.ts  layers.svelte.ts  psd-export.ts  tauri.ts  types.ts
src/lib/components/: BrushLibrary.svelte  BrushSettings.svelte  ColorWheel.svelte  DrawingCanvas.svelte  LayerPanel.svelte  PreviewPane.svelte  SplitPane.svelte  Toolbar.svelte
